# git-pr-mcp

./: Dockerfile  pyproject.toml
k8s/: agent.yaml  deployment.yaml  service.yaml
src/git_pr_mcp/: server.py
