[project]
name = "git-pr-mcp"
version = "0.1.0"
description = "MCP for creating Git PRs"
readme = "README.md"
authors = [
    { name = "Git PR MCP" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.2",
    "pydantic>=2.11.5",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "sse-starlette>=2.3.6",
    "pygithub>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_pr_mcp"]

[tool.uv]
dev-dependencies = []
